# summit-sim

./: .cruft.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  LICENSE.md  README.md  SCRIPT.md  TODO.md  chainlit.md  docker-compose.yml  flake.nix  flyer.kra  mlflow.db  pyproject.toml
.chainlit/: config.toml
kubernetes/: cf-tunnel.yaml  common-helm.yaml  deployment.yaml  service.yaml
notebooks/: action-responder-prompt.ipynb  story-1-1-integration-test.ipynb  story-1-2-simulation-graph.ipynb  summit-sim-demo.ipynb
plans/: debrief-graph-integration.md  epic-1-dynamic-simulation.md  epic-2-web-poc.md  high-level-arch.md  high-level-state.md  judge-implementation.md  scenario-image-generation.md  story-1-1-implementation.md  story-1-2-simulation-graph.md  story-1-3-student-debrief.md  story-2-1-teacher-review-happy-path.md
plans/backlog/: agent-configuration-patterns.md  story-1-4-generator-debrief.md
plans/completed/: debrief-graph-integration.md  epic-1-dynamic-simulation.md  epic-2-web-poc.md  high-level-arch.md  judge-implementation.md  naming-conventions.md  story-1-1-implementation.md  story-1-2-simulation-graph.md  story-1-3-student-debrief.md  story-2-1-teacher-review-happy-path.md
public/: hide-chat.css  hide-chat.js
public/elements/: ChatEnabler.jsx  ChatVisibilityToggle.jsx  RevisionFeedbackForm.jsx  RoleSelection.jsx  ScenarioConfigForm.jsx
src/summit_sim/: __init__.py  app.py  main.py  schemas.py  settings.py  tracing.py
src/summit_sim/agents/: action_responder.py  config.py  debrief.py  generator.py  image_generator.py  simulation.py  utils.py
src/summit_sim/graphs/: __init__.py  author.py  shared.py  simulation.py  state.py  student.py  teacher.py  teacher_review.py  utils.py
src/summit_sim/judges/: __init__.py  continuity.py  medical.py  rollup.py  scoring.py  setup.py  structure.py  utils.py
src/summit_sim/ui/: __init__.py  author.py  simulation.py  student.py  teacher.py  utils.py
tests/: conftest.py  test_action_responder.py  test_agents_config.py  test_agents_utils.py  test_author_graph.py  test_debrief.py  test_dummy.py  test_generator.py  test_graphs_utils.py  test_id_generators.py  test_image_generator.py  test_schemas.py  test_simulation.py  test_simulation_graph.py  test_student_flow.py  test_teacher_review.py
