[project]
name = "summit_sim"
version = "0.1.0"
description = "Summit-Sim is an AI wilderness rescue simulator. It uses multi-agent validation to generate medically safe, interactive backcountry emergencies for dynamic first-responder training."
readme = "README.md"
authors = [
  {name = "Blake Hamm", email = "bhamm.lab@gmail.com"},
]
license = {text = "BSD license"}
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "mlflow>=3.10.1",
    "pydantic-ai>=1.70.0",
    "pydantic-settings>=2.13.1",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "cookiecutter>=2.6.0",
  "cruft>=2.15.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "coverage>=7.6.1",
  "ruff>=0.5.7",
  "pre-commit>=3.8.0",
  "ipykernel",
  "notebook",
  "jupyter",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "N", "D", "ANN", "B", "A", "T20", "PYI", "Q", "RET", "ARG", "PTH", "PL", "PT"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101", "PLR2004"]
"notebooks/*" = ["T20", "E402", "E501", "W293", "Q000", "B007", "PLR2004"]


[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage] # Coverage config
source = [
  "src",
  "tests",
  "notebooks",
]

[tool.coverage.run]
command_line = "-m pytest"
omit = ["*test*", "*__init__*", ".venv/*"]
include = ["src/*", "tests/*", "notebooks/*"]

# Always include branch coverage
branch = true

[tool.coverage.report]
fail_under = 80
ignore_errors = true
show_missing = true
